--- a/style.css
+++ b/style.css
@@ -210,11 +210,21 @@ nav ul li a.active, nav ul li a:hover { color: var(--primary-color); }
 
 .image-wrapper {
     width: 100%;
+    height: 100%;
+    max-width: 300px;
+    object-fit: cover;
+    object-position: center top;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+
+    /*
     max-width: 400px;
     aspect-ratio: 1 / 1;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+    */
 }
 
 .image-wrapper img {
